Review Request 15073: PLS-8985 Truncate long play names on dashboard page Prevent description textarea element from being resized horizontally so it doesn't overlap with launch charts.

--- a/le-ui/projects/leadprioritization/app/playbook/content/dashboard/dashboard.component.scss
+++ b/le-ui/projects/leadprioritization/app/playbook/content/dashboard/dashboard.component.scss
@@ -326,6 +326,7 @@ body.not-ie .playbook-dashboard .container-body .dashboard-section {
         margin-right: 20px;
         // border: 1px dashed transparent;
         min-height: 24px;
+        max-width: 96%;
         &.editing {
             width: 100%;
         }
@@ -363,6 +364,7 @@ body.not-ie .playbook-dashboard .container-body .dashboard-section {
             display: block;
             width: 100%;
             border: 1px dashed rgba(0,0,0,0.15);
+            resize: vertical;
         }
         input {
             position: absolute;
@@ -374,6 +376,11 @@ body.not-ie .playbook-dashboard .container-body .dashboard-section {
         }
         textarea {
             padding: 5px;
+        }
+        span {
+            text-overflow: ellipsis;
+            overflow: hidden;
+            display: inherit;
         }
     }
 }
